--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 dj-database-url==0.3.0
+dj-static==0.0.6
 Django==1.8.4
 django-crispy-forms==1.5.1
 django-postgrespool==0.3.0
 gunicorn==19.3.0
 psycopg2==2.6.1
 SQLAlchemy==1.0.8
+static3==0.6.1
 wheel==0.24.0
 whitenoise==2.0.3
